overflow fix with black and white images and hide one image for mobile devices only

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
     font-family: 'Source Sans Pro', sans;
 }
 
+
 /* ------Colours------ */
 
 body {
@@ -14,6 +15,11 @@ body {
 }
 
 /* -----Special margins/padding and text---------*/
+
+.intro {
+    padding: 0px;
+    margin: 0px;
+}
 
 .intro-container h2 {
     font-family: 'Montserrat', sans-serif;
@@ -27,6 +33,19 @@ body {
 .intro-container p {
     margin-top: 20px;
 }
+
+.intro-container {
+    padding-right: 0px;
+    overflow-x: hidden;
+}
+
+.image-container{
+    margin-bottom: 10px;
+    margin-top: 30px;
+    padding-right: 0px;
+    overflow-x: hidden;
+}
+
 
 
 
@@ -76,10 +95,6 @@ body {
     position: relative;
 }
 
-.intro-container {
-    margin-right: 0px;
-    margin-left: 0px;
-}
 
 .ceremony-image-container {
     height: 100vh;
@@ -100,13 +115,11 @@ body {
 
 }
 
-.intro-image-container {
-    margin-top: 30px;
-}
 
-.intro-image-container img {
+.image-container img {
     height: auto;
-    width: 90%;
+    width: 100%;
+    position: relative;
 
 }
 
@@ -121,7 +134,10 @@ body {
     border-top: double;
 } 
 
+.portfolio-button {
 
+
+}
 
 .fa-arrow-right {
     padding-left: 0.3rem;
@@ -192,7 +208,7 @@ margin-right: 0px;
 
  @media (max-width: 767px){
     .navbar {
-       padding:0 20px;
+       padding: 0 20px;
     } 
  }
 
